thêm tính năng giới hạn tần suất yêu cầu cho các endpoint xác thực